# plaid

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .readthedocs_env.yml  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ChangeLog.md  LICENSE.txt  README.md  SECURITY.md  bug_sample_save.py  conda_dev_env.yaml  conda_dev_env.yml  conda_minimal_env.yaml  conda_minimal_env.yml  environment.yml  fix_none_features_plan.md  implementation_plan.md  launch_tests.py  piste3_detailed_explanation.md  pixi.toml  pyproject.toml  pyrightconfig.json  ruff.toml  setup.py  square_2D.pickle  zensical.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build-wheel.yml  checksum_release.yml  detect_sensitive_info.yml  doc.yml  draft-pdf.yml  lint-check.yaml  lint-format-check.yaml  pr-title-checker.yml  publish-pypi.yml  testing.yml
.pre_commit_hooks/: check_confidential_patterns.py  check_patterns.py  patterns.txt
ParaViewPlugin/: PlaidPlugin.py
benchmarks/: README.md
benchmarks/2D_ElPlDynamics/: README.md
benchmarks/2D_MultiScHypEl/: README.md
benchmarks/2D_profile/: README.md
benchmarks/FNO/: README.md
benchmarks/MARIO/: README.md
benchmarks/MGN/: README.md  configs.py  data.py  main.py  main_2d_elasto_ddp.py  model.py  train.py  utils.py
benchmarks/Rotor37/: README.md
benchmarks/Tensile2d/: README.md
benchmarks/VKI-LS59/: README.md
benchmarks/Vi-Transf/: README.md  environment.yaml  main_elasto_plasto_dynamics.py  main_stationary.py
binder/: environment.yml  postBuild  start
conversion_scripts/: convert_PLAID_datasets.py  generate_config.py  read_hf_dataset.py
docs/: Makefile  conf.py  fix_module.py  generate_api_stubs.py  generate_diagrams.sh  generate_doc.sh  index.rst  refs.bib  requirements.yml  zensical.toml
docs/joss_paper/: paper.bib  paper.md  readme.md
docs/source/: api_reference.md  citation.md  class_diagrams.rst  concepts.md  concepts.rst  contributing.md  core_concepts.md  core_concepts.rst  data_challenges.rst  default_values.rst  description.md  diagrams.rst  examples_tutorials.md  examples_tutorials.rst  feature_identifiers.md  getting_started.md  impl_details.md  index.md  notebooks.rst  package_diagrams.rst  physarena.md  plaid_benchmarks.md  plaid_benchmarks.rst  quickstart.md  tutorial.md  upgrade_guide.md
docs/stylesheets/: extra.css
examples/: convert_users_data_example.py  dataset.ipynb  fem_with_gauss_point_data.py  infos_example.py  problem_definition.ipynb  problem_definition_example.py  run_examples.bat  run_examples.ps1  run_examples.sh  sample.ipynb  split.ipynb  stats.ipynb
examples/bridges/: check_retrocomp_benchmarks.py  huggingface_bridge_example.py  huggingface_example.py
examples/brigdes/: huggingface_bridge_example.py
examples/client_server/: SimplePredict.py  SimpleProcess.py  simple_process.py
examples/containers/: bench_parallel_load.py  dataset_example.py  mesh.vtk  sample_example.ipynb  sample_example.py
examples/conversions/: README.md
examples/downloadable_example/: sample_example.py
examples/examples/: downloadable_example.py
examples/io/: vtk_utils_example.py
examples/pipeline/: config.yml  config_2.yml  ml_pipeline_nodes.py  pipefunc_tensile2d.py  sklearn_pipeline.py  test.py
examples/pipelines/: config.yml  config_2.yml  config_3.yml  config_4.yml  config_5.yml  config_pipeline.yml  generic_pipeline.ipynb  ml_pipeline_nodes.py  ml_pipeline_nodes_2.py  ml_pipeline_nodes_3.py  ml_pipeline_nodes_4.py  ml_pipeline_nodes_5.py  optuna_pipeline.ipynb  optuna_pipeline_2.ipynb  optuna_pipeline_3.ipynb  optuna_pipeline_4.ipynb  optuna_pipeline_5.ipynb  pipeline.py  pipeline_example.py  sklearn_pipeline.ipynb  sklearn_pipeline.py  tests_5.py
examples/plot/: bissect_example.py  first_metrics.yaml  metrics_example.py  second_metrics.yaml
examples/post/: bisect_example.py  bissect_example.py  metrics_example.py
examples/utils/: huggingface_example.py  init_example.py  init_with_tabular_example.py  interpolation_example.py  split_example.py  stats_example.py  viz_example.py
examples/wrappers/: environment.yml  mmgp_pipeline.py  sklearn_example.py
plaid-mcp-server/: QUICKSTART.md  README.md  config.json  pyproject.toml  server.py  session_manager.py
plaid-mcp-server/tools/: __init__.py  conversion_tools.py  interactive_builder.py  problem_tools.py  sample_tools.py  storage_tools.py  utility_tools.py
src/plaid/: __init__.py  constants.py  info.py  infos.py  problem_definition.py  version.py
tests/: clean.bat  conftest.py  test_info.py  test_problem_definition.py
tests/bridges/: convert_PLAID_datasets.py  experiment_time.py  flow_bench_conversion.py  gen2.py  gen3.py  generate_and_push_hf_dataset_new.py  generate_hf_dataset.py  load2.py  load3.py  load_and_test_hf_dataset_new.py  load_hf_dataset.py  temp2.py  test_huggingface_bridge.py  test_time.py
tests/cli/: test_build_dataset.py  test_paraview_plugin.py  test_plaidcheck.py  test_serve.py
tests/containers/: __init__.py  test___init__.py  test_dataset.py  test_sample.py  test_utils.py
tests/io/: test_vtk_utils.py
tests/pipelines/: conftest.py  test_blocks.py  test_plaid_blocks.py  test_sklearn_block_wrappers.py
tests/post/: create_datasets.py  test_bisect.py  test_metrics.py
tests/problem_definition/: problem_infos.yaml  split.csv  split.json
tests/storage/: test_cgns_init.py  test_common_writer.py  test_hf_datasets_init.py  test_in_memory.py  test_preprocessor.py  test_storage.py  test_zarr_init.py
tests/types/: test_cgns_types.py
tests/utils/: test_base.py  test_cgns_helper.py  test_cgns_json.py  test_cgns_vtk.py  test_cgns_worker.py  test_deprecation.py  test_info.py  test_init.py  test_init_with_tabular.py  test_interpolation.py  test_json_codec.py  test_predict_client.py  test_sample_json.py  test_split.py  test_stats.py  test_viz.py
tests/viewer/: conftest.py  test_cache.py  test_cli.py  test_models.py  test_paraview_artifact_service.py  test_plaid_dataset_service.py  test_preferences.py  test_trame_helpers.py  test_trame_server.py
(+457 files in other folders)
