[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplaid"
authors = [{name = "Safran", email = "fabien.casenave@safrangroup.com"}]
description = "A package that implements a data model tailored for AI and ML in the context of physics problems"
requires-python = ">=3.10, <3.14"
keywords=[
    "machine learning",
    "physics",
    "data-model",
    "Safran",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "tqdm",
    "pyyaml",
    "pycgns",
    "scikit-learn",
    "datasets",
    "numpy",
    "matplotlib",
    "pydantic",
]

dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/plaid/_version.py"

[project.urls]
homepage = "https://plaid-lib.github.io"
documentation = "https://plaid-lib.readthedocs.io"
repository = "https://github.com/PLAID-lib/plaid"

[project.license]
text="BSD 3-Clause License"
files=["LICENSE.txt"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.setuptools]
platforms = [
    "Linux",
    "Mac OS-X",
    "Unix",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["plaid*"]

[project.optional-dependencies]
dev = [
    "optuna",
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-tabs",
    "sphinxcontrib.bibtex",
    "myst-nb",
    "myst-parser",
    "furo",
    "jupytext",
]

[tool.coverage.run]
omit = ["src/plaid/examples/*"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
