[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplaid"
authors = [{name = "Safran", email = "fabien.casenave@safrangroup.com"}]
description = "A package that implements a data model tailored for AI and ML in the context of physics problems"
requires-python = ">=3.11, <3.14"
keywords=[
    "machine learning",
    "physics",
    "data-model",
    "Safran",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "tqdm>=4.60,<5",
  "pyyaml>=6,<7",
  "pycgns>=6.3,<7",
  "zarr>=3.1,<4",
  "scikit-learn>=1.4,<2",
  "datasets>=2.18,<5",
  "numpy>=1.26,<3",
  "matplotlib>=3.8,<4",
  "pydantic>=2.6,<3",
]

dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/plaid/_version.py"

[project.urls]
homepage = "https://plaid-lib.github.io"
documentation = "https://plaid-lib.readthedocs.io"
repository = "https://github.com/PLAID-lib/plaid"

[project.license]
text="BSD 3-Clause License"
files=["LICENSE.txt"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.setuptools]
platforms = [
    "Linux",
    "Mac OS-X",
    "Unix",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["plaid*"]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "jupytext>=1.19.1",
    "muscat[storage]>=2.6.0rc1,<3",
    "myst-nb>=1.4.0",
    "myst-parser>=5.0.0",
    "optuna>=4.7.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "rich>=14.3.3",
    "ruff>=0.15.4",
    "sphinx>=9.0.4",
    "sphinx-autoapi>=3.7.0",
    "sphinx-tabs>=3.4.7",
    "sphinxcontrib-bibtex>=2.6.5",
]

[tool.coverage.run]
omit = ["src/plaid/examples/*"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
