[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplaid"
authors = [{name = "Safran", email = "fabien.casenave@safrangroup.com"}]
description = "A package that implements a data model tailored for AI and ML in the context of physics problems"
requires-python = ">=3.11, <3.14"
dynamic = ["version"]
keywords=[
    "machine learning",
    "physics",
    "data-model",
    "Safran",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "tqdm>=4.60,<5",
  "pyyaml>=6,<7",
  "pycgns>=6.3,<7",
  "zarr>=3.1,<4",
  "datasets>=2.18,<6",
  "numpy>=1.0,<3",
  "pydantic>=2.6,<3",
]
[project.optional-dependencies]
viewer = [
    "trame>=3.6,<4.0",
    "trame-vtk>=2.8,<3.0",
    "trame-vuetify>=2.7,<4.0",
    "vtk>=9.6.1",
]

[tool.setuptools_scm]
write_to = "src/plaid/_version.py"

[project.urls]
homepage = "https://plaid-lib.github.io"
documentation = "https://plaid-lib.readthedocs.io"
repository = "https://github.com/PLAID-lib/plaid"

[project.license]
text="BSD 3-Clause License"
files=["LICENSE.txt"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[project.scripts]
plaid-check = "plaid.cli.plaidcheck:main"
plaid-viewer = "plaid.viewer.cli:main"

[tool.setuptools]
platforms = [
    "Linux",
    "Mac OS-X",
    "Unix",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["plaid*"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupytext>=1.19.3",
    "muscat[storage]>=2.5.1",
    "mkdocstrings[python]>=0.27.0",
    "nbconvert>=7.16.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "rich>=14.3.3",
    "ruff>=0.15.4",
    "zensical>=0.0.38",
]

[tool.coverage.run]
omit = ["src/plaid/downloadable_examples/*"]

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
